public class Strings
{
    // Animation
    public const string ANIMATION_IDLE = "Idle";
    public const string ANIMATION_RUN = "Run";
    public const string ANIMATION_MELEEATTACK1 = "MeleeAttack1";
    public const string ANIMATION_MELEEATTACK_TRIGGER = "MeleeAttackTrigger";
    public const string ANIMATION_DEATH = "Death";

    // Tag
    public const string TAG_PLAYER = "Player";
    public const string TAG_MONSTER = "Monster";
}
